--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/pramudithamendis/BI-backend#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
