--- a/backend/config/metrics.config.json
+++ b/backend/config/metrics.config.json
@@ -664,7 +664,8 @@
       "order_by_column": "total_sessions",
       "order_by": "desc",
       "is_cumulative": 0,
-      "distinct_col": ""
+      "distinct_col": "",
+      "chart_type": "pie chart"
     }
   ]
 }
