in frontend /charts, displaying the chart based on the chart_type that comes from backend

--- a/backend/config/metrics.config.json
+++ b/backend/config/metrics.config.json
@@ -654,7 +654,7 @@
       "order_by": "desc",
       "is_cumulative": 1,
       "distinct_col": "email",
-      "chart_type": "pie chart"
+      "chart_type": "bar_chart"
     },
     {
       "table_name": "total_game_plays_daily",
@@ -665,7 +665,7 @@
       "order_by": "desc",
       "is_cumulative": 0,
       "distinct_col": "",
-      "chart_type": "pie chart"
+      "chart_type": "line_chart"
     }
   ]
 }
