--- a/backend/config/metrics.config.json
+++ b/backend/config/metrics.config.json
@@ -742,6 +742,17 @@
       "is_cumulative": 0,
       "distinct_col": "",
       "chart_type": "line_chart"
+    },
+    {
+      "table_name": "total_game_play_comission_daily",
+      "metric_name": ["Top game play commissions"],
+      "record_count": 5,
+      "columns": ["date_", "base_amount_100pct", "developer_share_50pct", "tax_18pct", "remainder_you_keep_32pct"],
+      "order_by_column": "remainder_you_keep_32pct",
+      "order_by": "desc",
+      "is_cumulative": 0,
+      "distinct_col": "",
+      "chart_type": "bar_chart2"
     }
   ]
 }
